fix an overflowed image

--- a/assets/css/testimonials.css
+++ b/assets/css/testimonials.css
@@ -26,6 +26,7 @@
   height: 100%;
   box-shadow: 0 0 36px #bbb;
   border-radius: 5px;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
 }
